# blog

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  README.md  asset-links.yaml  config.toml  config.yaml  hugo.yaml  sync_assets.py
experiments/aggregated_hotness/: hotness.py  pyproject.toml
experiments/aggregated_hotness/aggregated_hotness/: hotness.py  utils.py
experiments/alternative_sdj_winners/: Alternative candidates.py  Alternative winners.py  alt_candidates.csv  exclude.csv  pyproject.toml
experiments/alternative_sdj_winners/alternative_sdj_winners/: __init__.py
experiments/bga_elo/: .gitignore  EDA.py  Games.py  p-deterministic games.py  pyproject.toml
experiments/bga_elo/bga_elo/: bga_spider.py  data.py
experiments/board_game_map/: .gitignore  Games by latent vectors.py  Games by mechanics.py  Map ratings.py  games_by_mechanic.py  pyproject.toml
experiments/board_game_map/board_game_map/: data.py  plots.py
experiments/board_game_map/notebooks/: Games by latent vectors.py
experiments/board_game_map/plots/: ratings_factor_analysis.json  ratings_fastica.json  ratings_isomap.json  ratings_locally_linear.json  ratings_pca.json  ratings_spectral.json  ratings_tsne.json  ratings_umap.json
experiments/burgle_bros/: pyproject.toml  simulation.py
experiments/co_ops/: Co-operatives.py  co_ops.py  pyproject.toml
experiments/cover_classifier/: pyproject.toml
experiments/cover_classifier/cover_classifier/: __main__.py  data.py  model.py  training.py
experiments/debiased_rankings/: Debias rankings.py  EDA.py  pyproject.toml
experiments/debiased_rankings/debiased_rankings/: data.py  model.py  plots.py
experiments/debiased_rankings/results/: filtered_out.csv
experiments/election/: Trust.py  pyproject.toml
experiments/election/election/: schulze.py  trust.py
experiments/election/results/: ranked_games.csv  ratings_count.csv
experiments/elo/: .dockerignore  .env.example  .gitignore  BGA Elo.py  BGG ranking.py  Cargo.toml  Dockerfile  EDA.py  IPC.py  K investigations.py  Matches.py  Odds parsing.py  Plot sigmoid.py  Snooker API.py  Snooker data.py  Snooker tournament.py  compose.yaml  p-deterministic distribution.py  p-deterministic games.py  p-deterministic multi.py  pyproject.toml
experiments/elo/csv/: .gitignore  bga_bgg_map.csv  game_skills.csv  games.jl  games_stats.jl  p_deterministic.csv
experiments/elo/elo/: bga_spider.py  data.py  elo_ratings.py  elo_ratings_multi.py  game_stats.py  optimal_k.py  p_deterministic.py  snooker_spider.py
experiments/elo/notebooks/: BGA Elo.py  BGG ranking 2.py  EDA.py  Elo distribution plot.py  Football international data.py  Game skills.py  Games skills EDA.py  K investigations.py  Odds parsing.py  Plot sigmoid.py  Process matches.py  Snooker data.py  Snooker tournament.py  Tennis data.py  Variance decomposition.py  p-deterministic benchmarks.py  p-deterministic distribution.py  p-deterministic distributions.py
experiments/elo/plots/: skill_vs_complexity.json
experiments/elo/python/elo/: data.py  (+10 more)
experiments/elo/rust/: core.rs  lib.rs  main.rs
experiments/elo/src/: lib.rs  main.rs
experiments/g_index/: G-Index.py  g_index.csv  games.csv  players.csv  players_g_index.csv  pyproject.toml
experiments/g_index/g_index/: __init__.py  metrics.py
experiments/geek_score/: EDA.py  Load data.py  Rankings requests.py  Rankings.py  pyproject.toml
experiments/geek_score/geek_score/: rankings.py
experiments/generate_bg_titles/: .gitignore  Data.py  Model_1.py  pyproject.toml
experiments/high_society/: High Society.py  pyproject.toml
experiments/hotness/: analysis.py  pyproject.toml
experiments/kennerspiel/: Pipfile  complexity_vs_min_age.json  complexity_vs_min_age_before_2011.json  kennerspiel.py  kindersdj.csv  ksdj.csv  model.py  pyproject.toml  results_post_2011.csv  results_pre_2011.csv  sdj.csv
experiments/living_forest/: cards.csv  living_forest.py  pyproject.toml
experiments/menace/: pyproject.toml
experiments/menace/menace/: __main__.py  chat_gpt.py
experiments/orchard/: Plots.py  pyproject.toml
experiments/orchard/orchard/: __main__.py  game.py
experiments/rankings_by_country/: Rankings per country.py  Ratings per country.py  World of board games.py  countries.csv  pyproject.toml  rankings.csv
experiments/rankings_by_country/plots/: board_games_world_map.json
experiments/rankings_by_country/rankings/: ae.csv  ar.csv  at.csv  au.csv  be.csv  bg.csv  br.csv  by.csv  ca.csv  ch.csv  cl.csv  cn.csv  co.csv  cr.csv  cz.csv  de.csv  dk.csv  ee.csv  es.csv  fi.csv  fr.csv  gb.csv  gr.csv  hk.csv  hr.csv  hu.csv  id.csv  ie.csv  il.csv  in.csv  ir.csv  is.csv  it.csv  jp.csv  kr.csv  lt.csv  lu.csv  lv.csv  mx.csv  my.csv  (+22 more)
experiments/rules_ratio/: .env.example  .gitignore  Dockerfile  Rules ratio.py  compose.yaml  pyproject.toml
experiments/sdj_2022/: alt_candidates.csv  alt_candidates.py  candidates.md  exclude.csv  features.json  include.csv  model.py  notes.yaml  predictions.csv  predictions.py  pyproject.toml
experiments/sdj_2023/: alt_candidates.csv  alt_candidates.py  candidates.md  exclude.csv  features.json  include.csv  model.py  notes.yaml  predictions.csv  predictions.py  pyproject.toml
experiments/sdj_2024/: 01_alt_candidates.py  02_model.py  03_predictions.py  03_quantile_transformer.py  04_predictions.py  alt_candidates.csv  alt_candidates.py  candidates.md  exclude.csv  features.json  include.csv  kindersdj.csv  notes.yaml  predictions.csv  pyproject.toml  reviews.csv
experiments/sdj_2025/: 01-Predictions.py  02-Article.py  03-Evaluation.py  descriptions.csv  kennerspiel.joblib  predictions.csv  predictions.md  pyproject.toml  template.md
experiments/sdj_designers/: SdJ winning designers.py  designers.csv  designers.py  games.csv  pyproject.toml  table.md
experiments/synthetic_control/: .gitignore  data.py  data_collections.py  model.py  pyproject.toml
experiments/votes_by_year/: .gitignore  Pipfile  adjust.py  pyproject.toml
experiments/wikipedia/: merge.py  plot.py  pyproject.toml  rankings.py  wiki.py  wiki_bgg_links.csv  wiki_stats.json
(+3164 files in other folders)
