[tool.poetry]
name = "aggregated_hotness"
version = "0.1.0"
description = ""
authors = ["Markus Shepherd <markus@recommend.games>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pandas = "^1.3.4"
jupyterlab = "^3.2.1"
jupytext = "^1.13.0"
nb-black = "^1.0.7"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
