[tool.poetry]
name = "aggregated_hotness"
version = "0.1.0"
description = ""
authors = ["Markus Shepherd <markus@recommend.games>"]

[tool.poetry.dependencies]
python = "^3.8"

black = "^21.9b0"
jupyterlab = "^3.2.1"
jupytext = "^1.13.0"
nb-black = "^1.0.7"
numpy = {version = "^1.21.3", python = ">=3.8,<3.11"}
pandas = "^1.3.4"
pytility = "^0.3.0"
snaptime = "^0.2.4"
python-dateutil = "^2.8.2"
pylint = "^2.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
