[tool.poetry]
name = "alternative-sdj-winners"
version = "0.1.0"
description = "Games that should have won Spiel des Jahres"
authors = ["Markus Shepherd <markus@recommend.games>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"

polars = "*"
requests = "*"
tqdm = "*"

[tool.poetry.group.dev.dependencies]
jupyter-black = "*"
jupyterlab = "*"
jupytext = "*"
mypy = "*"
ruff = "*"
types-tqdm = "*"

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
