[tool.poetry]
name = "board-game-map"
version = "0.1.0"
description = "Board game embeddings and maps"
authors = ["Markus Shepherd <markus@recommend.games>"]

[tool.poetry.dependencies]
python = "3.12.*"

bokeh = "*"
dask = {version = "*", extras = ["dataframe"]}
matplotlib = "*"
numpy = "*"
pandas = "*"
polars = {version = "*", extras = ["pandas"]}
scikit-learn = "*"
scipy = "*"
seaborn = "*"
tqdm = "*"
umap-learn = {extras = ["plot"], version = "*"}

[tool.poetry.group.dev.dependencies]
jupyter-black = "*"
jupyter-bokeh = "*"
jupyterlab = "*"
jupytext = "*"
mypy = "*"
ruff = "*"
types-seaborn = "*"
types-tqdm = "*"

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
