[project]
name = "board-game-map"
version = "0.1.0"
description = "Board game embeddings and maps"
authors = [
    { name = "Markus Shepherd", email = "markus@recommend.games" },
]

requires-python = "==3.14.*"

packages = [
    { include = "board_game_map", from = "python" },
]

dependencies = [
    "bokeh",
    "matplotlib",
    "numpy",
    "polars[pandas]",
    "scikit-learn",
    "scipy",
    "seaborn",
    "tqdm",
    "umap-learn[plot]",
]

[dependency-groups]
dev = [
    "jupyter-black",
    "jupyter-bokeh",
    "jupyterlab",
    "jupytext",
    "mypy",
    "ruff",
    "ty",
    "types-seaborn",
    "types-tqdm",
]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
]

[tool.ruff]
target-version = "py314"

[tool.mypy]
python_version = "3.14"
