[project]
name = "board-game-map"
version = "0.1.0"
description = "Board game embeddings and maps"
authors = [
    { name = "Markus Shepherd", email = "markus@recommend.games" },
]

requires-python = "==3.14.*"

dependencies = [
    "bokeh",
    "matplotlib",
    "numpy",
    "polars[pandas]",
    "scikit-learn",
    "scipy",
    "seaborn",
    "tqdm",
    "umap-learn[plot]",
]

[dependency-groups]
dev = [
    "jupyter-black",
    "jupyter-bokeh",
    "jupyterlab",
    "jupytext",
    "mypy",
    "ruff",
    "ty",
    "types-seaborn",
    "types-tqdm",
]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
]

[tool.uv.build-backend]
module-name = "board_game_map"
module-root = "python"

[tool.ruff]
target-version = "py314"

[tool.mypy]
python_version = "3.14"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
