[tool.poetry]
name = "burgle_bros"
version = "0.1.0"
description = "Burgle Bros safe cracking strategy guide"
authors = ["Markus Shepherd <markus@recommend.games>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

board-game-utils = "^0.1.1"
matplotlib = "^3.5.0"
numpy = "^1.21.4"
pandas = "^1.3.4"
pytility = "^0.3.0"
scikit-learn = "^1.0.1"
scipy = "^1.7.3"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
mypy = "^0.910"
nb-black = "^1.0.7"
jupyter = "^1.0.0"
jupyterlab = "^3.2.4"
jupytext = "^1.13.2"
pylint = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
