[tool.poetry]
name = "cover-classifier"
version = "0.1.0"
description = "Classify the types of board games by their covers"
authors = ["Markus Shepherd <markus@recommend.games>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"

black = "*"
lightning = "*"
jmespath = "*"
jupyter-black = "*"
jupyterlab = "*"
jupytext = "*"
matplotlib = "*"
mypy = "*"
numpy = "*"
polars = "*"
pylint = "*"
scikit-learn = "*"
scipy = "*"
seaborn = "*"
torch = "*"
torchmetrics = "*"
torchvision = "*"
tqdm = "*"

[tool.poetry.group.dev.dependencies]
types-jmespath = "*"
types-pillow = "*"
types-tqdm = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "torchvision.*",
]
ignore_missing_imports = true
