[package]
name = "elo"
version = "0.1.0"
edition = "2021"

[lib]
name = "elo"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.9.0"
pyo3 = { version = "0.22.4", features = ["extension-module", "abi3-py312"] }
rand_distr = "0.4"
rayon = "1.10"     # optional for MC sampling
once_cell = "1.19" # for cached permutations
