[tool.poetry]
name = "elo"
version = "0.1.0"
description = ""
authors = ["Markus Shepherd <markus@recommend.games>"]

[tool.poetry.dependencies]
python = "3.13.*"

board-game-merger = "*"
funcy = "*"
jmespath = "*"
matplotlib = "*"
networkx = "*"
nevergrad = "*"
numpy = "*"
polars = {version = "*", extras = ["numpy", "pandas", "pyarrow"]}
requests = "*"
scikit-learn = "*"
scipy = "!= 1.14.1"
scrapy = "*"
scrapy-extensions = ">=1.0.1"
seaborn = "*"
statsmodels = "*"
tabulate = "*"
tqdm = "*"

[tool.poetry.group.dev.dependencies]
funcy-typing = "*"
jupyter-black = "*"
jupyterlab = "*"
jupytext = "*"
mypy = "*"
ruff = "*"
scipy-stubs = "*"
types-jmespath = "*"
types-networkx = "*"
types-tqdm = "*"

[tool.ruff]
target-version = "py313"

[tool.mypy]
python_version = "3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
