[project]
name = "elo"
version = "0.1.0"
description = "Elo implementation and experiments"
authors = [
    { name = "Markus Shepherd", email = "markus@recommend.games" },
]

requires-python = "==3.13.*"
dependencies = [
    "board-game-merger",
    "funcy",
    "jmespath",
    "matplotlib",
    "networkx",
    "nevergrad",
    "numpy",
    "polars[numpy,pandas,pyarrow]",
    "requests",
    "scikit-learn",
    "scipy!=1.14.1",
    "scrapy",
    "scrapy-extensions>=1.0.1",
    "seaborn",
    "statsmodels",
    "tabulate",
    "tqdm",
]

[dependency-groups]
dev = [
    "funcy-typing",
    "jupyter-black",
    "jupyterlab",
    "jupytext",
    "maturin",
    "mypy",
    "ruff",
    "scipy-stubs",
    "types-jmespath",
    "types-networkx",
    "types-tqdm",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"

[tool.mypy]
python_version = "3.13"
