[tool.poetry]
name = "geek-score"
version = "0.1.0"
description = "Predict BGG geek scores"
authors = ["Markus Shepherd <markus@recommend.games>"]
readme = "README.md"
packages = [{include = "geek_score"}]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.24.1"
scipy = "^1.10.0"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
tqdm = "^4.64.1"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
more-itertools = "^9.0.0"
requests = "^2.28.2"
pytility = "^0.3.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
nb-black = "^1.0.7"
jupyterlab = "^3.5.2"
jupytext = "^1.14.4"
isort = "^5.11.4"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
