[tool.poetry]
name = "generate-bg-titles"
version = "0.1.0"
description = "Use textgenrnn to generate board game titles"
authors = ["Markus Shepherd <markus@recommend.games>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"

accelerate = ">=0.32.0"
torch = "<2.3.0"
transformers = {extras = ["torch"], version = "*"}
tqdm = "*"

[tool.poetry.group.dev.dependencies]
jupyter-black = "*"
jupyterlab = "*"
jupytext = "*"
mypy = "*"
ruff = "*"
types-tqdm = "*"

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
