[tool.poetry]
name = "hotness"
version = "0.1.0"
description = ""
authors = ["Markus Schepke <markus.schepke@wolt.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pandas = "^1.4.2"
black = "^22.3.0"
nb-black = "^1.0.7"
jupyter = "^1.0.0"
jupyterlab = "^3.3.4"
jupytext = "^1.13.8"
pylint = "^2.13.7"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
