[tool.poetry]
name = "hotness"
version = "0.1.0"
description = ""
authors = ["Markus Shepherd <markus@recommend.games>"]

[tool.poetry.dependencies]
python = "^3.10"

pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
jupyter = "^1.0.0"
jupyterlab = "^3.3.4"
jupytext = "^1.13.8"
mypy = "^0.950"
nb-black = "^1.0.7"
pylint = "^2.13.7"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
