[tool.poetry]
name = "kennerspiel"
version = "0.1.0"
description = "Kennerspiel scores"
authors = ["Markus Shepherd <markus@recommend.games>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.7"

board-game-utils = "^0.1.1"
bokeh = "^2.4.2"
matplotlib = "^3.5.0"
numpy = "^1.21.4"
pytility = "^0.3.0"
scikit-learn = "<1.1.0"
scipy = "^1.7.3"
seaborn = "^0.11.2"
shap = "^0.40.0"
tabulate = "^0.8.9"
llvmlite = "^0.38.0"
numba = "^0.55.1"
joblib = "^1.1.0"
pandas = "<1.4.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.910"
nb-black = "^1.0.7"
jupyter = "^1.0.0"
jupyterlab = "^3.3.4"
jupytext = "^1.13.8"
pylint = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
