[tool.poetry]
name = "kennerspiel"
version = "0.1.0"
description = "Kennerspiel scores"
authors = ["Markus Shepherd <markus@recommend.games>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.*"

board-game-utils = "*"
bokeh = "*"
matplotlib = "*"
numpy = "*"
pytility = "*"
scikit-learn = "<1.1.0"
scipy = "<1.8.0"
seaborn = "*"
shap = "*"
tabulate = "*"
llvmlite = "*"
numba = "*"
joblib = "*"
pandas = "<1.4.0"

[tool.poetry.dev-dependencies]
black = "*"
jupyter-black = "*"
jupyterlab = "*"
jupytext = "*"
mypy = "*"
pylint = "*"

[tool.mypy]
python_version = "3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
