[tool.poetry]
name = "menace"
version = "0.1.0"
description = "Matchbox Educable Noughts and Crosses Engine implementation"
authors = ["Markus Shepherd <markus@recommend.games>"]

[tool.poetry.dependencies]
python = "3.12.*"

[tool.poetry.group.dev.dependencies]
jupyter-black = "*"
jupyterlab = "*"
jupytext = "*"
mypy = "*"
ruff = "*"
types-tqdm = "*"

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
