[tool.poetry]
name = "orchard"
version = "0.1.0"
description = "(First) Orchard implementation"
authors = ["Markus Shepherd <markus@recommend.games>"]

[tool.poetry.dependencies]
python = "3.12.*"

black = "*"
isort = "*"
jupyter-black = "*"
jupyterlab = "*"
jupytext = "*"
matplotlib = "*"
mypy = "*"
numpy = "*"
polars = "*"
pylint = "*"
scipy = "*"
seaborn = "*"
tqdm = "*"

[tool.poetry.group.dev.dependencies]
types-tqdm = "*"

[tool.black]
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
