[tool.poetry]
name = "rankings-by-country"
version = "0.1.0"
description = ""
authors = ["Markus Shepherd <markus@recommend.games>"]

[tool.poetry.dependencies]
python = "3.12.*"

bokeh = "*"
country-converter = "*"
emoji-country-flag = "*"
matplotlib = "*"
numpy = "*"
polars = {version = "*", extras = ["pandas"]}
requests = "*"
scipy = "*"
seaborn = "*"
tqdm = "*"

[tool.poetry.group.dev.dependencies]
jupyter-black = "*"
jupyterlab = "*"
jupytext = "*"
mypy = "*"
ruff = "*"
types-tqdm = "*"

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
