[tool.poetry]
name = "sdj_2022"
version = "0.1.0"
description = "Spiel des Jahres 2022 predictions"
authors = ["Markus Shepherd <markus@recommend.games>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"

black = "^21.12b0"
board-game-utils = "^0.1.1"
ipython = "^8.0.1"
jupyterlab = "^3.2.8"
jupytext = "^1.13.6"
libclang = "<12.0.0"
matplotlib = "^3.5.1"
mypy = "^0.931"
nb-black = "^1.0.7"
numpy = "^1.22.1"
pandas = "^1.4.0"
pylint = "^2.12.2"
pytility = "^0.3.0"
scikit-learn = "^1.0.2"
scipy = "^1.7.3"
seaborn = "^0.11.2"
tabulate = "^0.8.9"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
