[tool.poetry]
name = "sdj-2025"
version = "0.1.0"
description = ""
authors = ["Markus Shepherd <markus@recommend.games>"]

[tool.poetry.dependencies]
python = "3.13.*"

spiel-des-jahres = {version = ">=0.2.1,<1.0.0", extras = ["kennerspiel", "predictions"]}

[tool.poetry.group.dev.dependencies]
jupyter-black = "*"
jupyterlab = "*"
jupytext = "*"
mypy = "*"
ruff = "*"

[tool.ruff]
target-version = "py313"

[tool.mypy]
python_version = "3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
