[tool.poetry]
name = "synthetic-control"
version = "0.1.0"
description = "Synthetic control applied to board games"
authors = ["Markus Shepherd <markus@recommend.games>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.12.*"

black = "*"
isort = "*"
jupyter-black = "*"
jupyterlab = "*"
jupytext = "*"
matplotlib = "*"
mypy = "*"
numpy = "*"
polars = "*"
scikit-learn = "*"
scipy = "*"
seaborn = "*"
tqdm = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
