[tool.poetry]
name = "synthetic-control"
version = "0.1.0"
description = "Synthetic control applied to board games"
authors = ["Markus Shepherd <markus@recommend.games>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.12.*"

matplotlib = "*"
numpy = "*"
polars = {version = "*", extras = ["pandas"]}
scikit-learn = "*"
scipy = "*"
seaborn = "*"
tqdm = "*"

[tool.poetry.group.dev.dependencies]
jupyter-black = "*"
jupyterlab = "*"
jupytext = "*"
mypy = "*"
ruff = "*"
types-tqdm = "*"

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
