[tool.poetry]
name = "votes-by-year"
version = "0.1.0"
description = "Adjust ratings by year"
authors = ["Markus Shepherd <markus@recommend.games>"]

[tool.poetry.dependencies]
python = "3.12.*"

matplotlib = "*"
numpy = "*"
pandas = "*"
polars = {version = "*", extras = ["pandas"]}
pytility = "*"
scipy = "*"
scikit-learn = "*"
seaborn = "*"
tqdm = "*"

[tool.poetry.group.dev.dependencies]
jupyter-black = "*"
jupyterlab = "*"
jupytext = "*"
mypy = "*"
ruff = "*"
types-tqdm = "*"

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
